crates/clan/clan-core/tests/snapshots/clan_golden__freq_eng_mor_tier@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Total types: 13
  Total tokens: 15
  TTR: 0.867
  Count  Word                         
  -----  -----------------------------
  2      det|the-def-art              
  2      pron|he-prs-nom-s3           
  1      adp|to                       
  1      adp|up                       
  1      cconj|and                    
  1      noun|hill                    
  1      noun|top                     
  1      noun|triangle                
  1      sconj|until                  
  1      verb|get-fin-ind-past-s3-irr 
  1      verb|go-ger-s                
  1      verb|keep-fin-ind-past-s3-irr
  1      verb|twirl-fin-ind-past-s3   

Speaker: GES
  Total types: 12
  Total tokens: 13
  TTR: 0.923
  Count  Word                        
  -----  ----------------------------
  2      det|the-def-art             
  1      adp|to                      
  1      adp|up                      
  1      noun|angle                  
  1      noun|hill-acc               
  1      noun|to                     
  1      pron|he-prs-nom-s3          
  1      sconj|until                 
  1      verb|get-fin-ind-past-s3-irr
  1      verb|go-ger-s               
  1      verb|keep-part-past-s-irr   
  1      verb|twirl-fin-ind-past-s1
