crates/clan/clan-core/tests/snapshots/clan_golden__freq_mor_tier@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *CHI:
  1 aux|be&PRES
  1 noun|cookie-PL
  1 pron|I
  1 pron|it
  1 verb|want
------------------------------
    5  Total number of different item types used
    5  Total number of items (tokens)
1.000  Type/Token ratio

Speaker: *MOT:
  1 aux|will
  1 pron|them
  1 propn|Mommy
  1 verb|get&INF
------------------------------
    4  Total number of different item types used
    4  Total number of items (tokens)
1.000  Type/Token ratio
