crates/clan/clan-core/tests/snapshots/clan_golden__freq_mor_tier@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total types: 5
  Total tokens: 5
  TTR: 1.000
  Count  Word          
  -----  --------------
  1      aux|be&pres   
  1      noun|cookie-pl
  1      pron|i        
  1      pron|it       
  1      verb|want     

Speaker: MOT
  Total types: 4
  Total tokens: 4
  TTR: 1.000
  Count  Word        
  -----  ------------
  1      aux|will    
  1      pron|them   
  1      propn|mommy 
  1      verb|get&inf
