crates/clan/clan-core/tests/snapshots/clan_golden__freq_speaker_chi@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *CHI:
  1 I
  1 cookies
  1 it's
  1 want
------------------------------
    4  Total number of different item types used
    4  Total number of items (tokens)
1.000  Type/Token ratio
    This TTR number was not calculated on the basis of %mor line forms.
    If you want a TTR based on lemmas, run FREQ on the %mor line
    with option: +sm;*,o%
