crates/clan/clan-core/tests/snapshots/clan_golden__freq_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total types: 4
  Total tokens: 4
  TTR: 1.000
  Count  Word   
  -----  -------
  1      cookies
  1      i      
  1      it's   
  1      want
