crates/clan/clan-core/tests/snapshots/clan_golden__freq_word_include@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Speaker: *CHI:
------------------------------
    0  Total number of different item types used
    0  Total number of items (tokens)

Speaker: *MOT:
------------------------------
    0  Total number of different item types used
    0  Total number of items (tokens)
