crates/clan/clan-core/tests/snapshots/clan_golden__freqpos_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
  1  and                   initial =  1, final =  0, other =  0, one word =  0
  1  angle                 initial =  1, final =  0, other =  0, one word =  0
  2  going                 initial =  0, final =  2, other =  0, one word =  0
  2  got                   initial =  0, final =  0, other =  2, one word =  0
  3  he                    initial =  0, final =  0, other =  3, one word =  0
  2  hill                  initial =  0, final =  1, other =  1, one word =  0
  2  kept                  initial =  0, final =  0, other =  2, one word =  0
  4  the                   initial =  0, final =  0, other =  4, one word =  0
  3  to                    initial =  0, final =  1, other =  2, one word =  0
  1  top                   initial =  0, final =  1, other =  0, one word =  0
  1  triangle              initial =  1, final =  0, other =  0, one word =  0
  2  twirled               initial =  1, final =  0, other =  1, one word =  0
  2  until                 initial =  1, final =  0, other =  1, one word =  0
  2  up                    initial =  0, final =  0, other =  2, one word =  0

Number of words in an initial position =  5
Number of words in an other position   = 18
Number of words in a final position    =  5
Number of one word utterences          =  0
